Revision history for Dancer

{{$NEXT}}

    [ BUG FIXES ]
    * GH #959: hash randomization could cause .pl MIME to vary and test
        to fail. (Olof Johansson)

1.3118 01.09.2013

    [ ENHANCEMENTS ]
    * GH #946: new 'require_environment' setting. (Jesse van Herk)
    * GH #952: don't set defaults for Template subclasses for 
        Dancer::Template::TemplateToolkit. (Rick Myers)
    * GH #945: add function 'template_or_serialize' to
        Dancer::Serializer::Mutable. (Yanick Champoux)

    [ BUG FIXES ]
    * GH #655: clarify logger error message. (Yanick Champoux, 
        reported by Gabor Szabo)
    * GH #951: fix quoting of TemplateToolkit start_tag/stop_tag.
        (Rick Myers)
    * GH #940: carry over the session when we forward(). 
        (Yanick Champoux, reported by sciurius)
    * GH #954: don't die on autoflush for older perls. 
        (Yanick Champoux, reported by metateck and David Golden)
    * GH #950: Dancer::Test functions now populate REQUEST_URI.
        (Yanick Champoux, reported by Sören Kornetzki)

    [ DOCUMENTATION ]
    * GH #942: simpilify the Apache deployment docs for cgi/fcgi.
        (bug report by Scott Penrose)

    [ MISC ]
    * GH #949: fixes a few errors in the serializer testsuite. 
        (Franck Cuny)

1.3117 31.07.2013

    [ ENHANCEMENTS ]
    * GH #836: Provide more information when an engine fails to load.
        (Yanick Champoux, reported by Daniel Perrett)

    [ BUG FIXES ]
    * GH #794: Upload data was not kept for forwarded requests. 
        (reported by William Wolf)
    * GH #898: calling halt() doesn't discard set headers anymore. 
        (Yanick Champoux, reported by Nicolas Franck)
    * GH #842: embedded 'prefix' now properly localized. 
        (Yanick Champoux, reported by Jashank Jeremy)

    [ DOCUMENTATION ]
    * GH #938: fix doc typos in Dancer::Serializer. (Fabrice Gabolde)
    * GH #712: add all status codes known to Dancer to Dancer::HTTP. 